Added css classes from last years schedule

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -9,54 +9,54 @@
         <table class="schedule simple" id="dayI">
         	<tbody>
         		<tr>
-        			<td>-- : --</td>
-        			<td>Addy Osmani</td>
-        			<td>JS Performance</td>
+        			<td class="time">-- : --</td>
+        			<td class="title">Addy Osmani</td>
+        			<td class="additional">JS Performance</td>
         		</tr>
         		<tr>
-        			<td>-- : --</td>
-        			<td>Reginald Braithwaite</td>
-        			<td></td>
+        			<td class="time">-- : --</td>
+        			<td class="title">Reginald Braithwaite</td>
+        			<td class="additional"></td>
         		</tr>
         		<tr>
-        			<td>-- : --</td>
-        			<td>Magnar Sveen</td>
-        			<td>Tooling</td>
+        			<td class="time">-- : --</td>
+        			<td class="title">Magnar Sveen</td>
+        			<td class="additional">Tooling</td>
         		</tr>
         		<tr>
-        			<td>-- : --</td>
-        			<td>David Nolen</td>
-        			<td>Alt. langs</td>
+        			<td class="time">-- : --</td>
+        			<td class="title">David Nolen</td>
+        			<td class="additional">Alt. langs</td>
         		</tr>
         		<tr>
-        			<td>-- : --</td>
-        			<td>Marius Gundersen</td>
-        			<td>JavaScript libs internals</td>
+        			<td class="time">-- : --</td>
+        			<td class="title">Marius Gundersen</td>
+        			<td class="additional">JavaScript libs internals</td>
         		</tr>
         		<tr>
-        			<td>-- : --</td>
-        			<td>Garann Means</td>
-        			<td></td>
+        			<td class="time">-- : --</td>
+        			<td class="title">Garann Means</td>
+        			<td class="additional"></td>
         		</tr>
         		<tr>
-        			<td>-- : --</td>
-        			<td>Bodil Stokke</td>
-        			<td></td>
+        			<td class="time">-- : --</td>
+        			<td class="title">Bodil Stokke</td>
+        			<td class="additional"></td>
         		</tr>
         		<tr>
-        			<td>-- : --</td>
-        			<td>Robert Nyman</td>
-        			<td>Keynote</td>
+        			<td class="time">-- : --</td>
+        			<td class="title">Robert Nyman</td>
+        			<td class="additional">Keynote</td>
         		</tr>
         		<tr>
-        			<td>-- : --</td>
-        			<td>Mario Heiderich</td>
-        			<td>Security</td>
+        			<td class="time">-- : --</td>
+        			<td class="title">Mario Heiderich</td>
+        			<td class="additional">Security</td>
         		</tr>
         		<tr>
-        			<td>-- : --</td>
-        			<td>Jan Lehnardt</td>
-        			<td></td>
+        			<td class="time">-- : --</td>
+        			<td class="title">Jan Lehnardt</td>
+        			<td class="additional"></td>
         		</tr>
         	</tbody>
         </table>
