adding ticket confirmation page and some other updates..

--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -12,14 +12,9 @@
         </h1>
 
 		<h2>This is included in your ticket</h2>
-		<p>Entrance to the conference and the Open Mic Night. And yeah; there will be swags.</p>
-		<p>Full buffet breakfast both days (no need to grab that on your hotel), full lunch both days, full dinner day one and unlimited coffee / tea plus afternoon sweets. In other words; you will not need to buy any food during the conference!</p>
-		<p>Access to the conference party on day one. Each attendee will be given a decent amount of free baverages where one can choose between a wide selection of micro brewery beers, wine or mineral water.</p>
-
-		<h2>You can travel and stay in Norway cheaply</h2>
-		<p><a target="_blank" href="http://norwegian.no/en/">Norwegian</a> and <a target="_blank" href="http://www.flysas.com/en/uk/">Scandinavian Airlines</a> both have lower priced tickets on sale which you can get if you make reservations early. <a target="_blank" href="http://norwegian.no/en/">Norwegian</a> tends to be the cheapest option, check out their <a href="http://www.norwegian.no/en/flight/lowfare/?D_City=LGW&A_City=OSL&TripType=2&D_Month=201305&R_Month=201305&AdultCount=1&ChildCount=0&InfantCount=0">calendar app for cheapest flights in the period</a> (this URL links to flight from London to Oslo).</p>
-		<p>Hotels can be expensive, so we've arranged for a rebel discount on the hotels at the venue. Read about the <a href="/location">hotel discounts</a> for more information.</p>
-
+		<p>Entrance to the conference and the <a href="/openmic">Open Mic Night</a>.</p>
+		<p>Buffet breakfast both days and lunch both days. Dinner on day one and continous delivery of coffee / tea plus. In other words; you will not need to buy any food during the conference!</p>
+		<p>Access to the conference party at the end of day one. Each attendee will be given a decent amount of free baverages where one can choose between a wide selection of micro brewery beers, wine or mineral water.</p>
 		
     </article>
     <% include snips/footer.ejs %>
