--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,7 @@ ul {
 /** Table styles **/
 table.simple {
     width: 100%;
-    border: 1px solid #f0f0f0;
+    border: 1px solid #ddd;
     border-collapse: separate;
     border-radius: 4px;
     padding: 0;
@@ -33,30 +33,31 @@ table.simple td, table.simple th {
 }
 
 table.simple thead th {
-    background-color: #202020;
+    background-color: #666;
+    color: #fff;
 }
 
 table.simple th {
     padding-top: 9px;
     vertical-align: middle;
-    font-weight: bold;
+    font-weight: normal;
 }
 table.simple th, table td {
     padding: 10px 10px 9px 0;
     line-height: 1.5em;
     text-align: left;
 }
-table.outerborder td, table.outerborder th {
+table.simple td, table.simple th {
     padding-left: 10px;
 }
 
 table.simple td {
     vertical-align: top;
-    border-top: 1px solid #f0f0f0;
+    border-top: 1px solid #ddd;
 }
 
 table.simple th, table.simple td {
-    padding: 10px 10px 9px 0;
+    padding: 10px 10px 9px 20px;
     line-height: 1.5em;
     text-align: left;
 }
