--- a/views/location.ejs
+++ b/views/location.ejs
@@ -33,20 +33,6 @@
             </ul>
         </div>
 
-
-        <h2>Staying in Oslo</h2>
-        <p>There are several great hotel in walking distance from the venue. Oslo can be a busy town, we do recommend booking your room early! Here are some of the hotels closes to our venue:</p>
-
-        <strong>Scandic Hotel Vulkan</strong>
-        <p>Scandic Hotel Vulkan is Web Rebels 2013 hotel partner. The hotel is a modern design hotel right next door to the venue. By staying here your will be able to walk in your slippers from your room and into the venue. When booking your Web Rebels 2013 ticket you will be given a discount code which can be used at this hotel. <a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Hotel website.</a></p>
-
-        <strong>PS:Hotell</strong>
-        <p>We're also happy that there is a cheaper hotel at the premises, just 20-30 m from the venue, which has extremely low prices. <a href="http://www.pshotell.no/">Hotel website</a></p>
-
-        <strong>Comfort Hotel xPress Oslo</strong>
-        <p>One of the coolest new hotels in the city, similar to the <a href="http://yotel.com">Yotel concept</a> in other cities. It's located right in the <a href="https://www.google.com/maps?q=m%C3%B8llergata+26+oslo&hl=no&ie=UTF8&sll=61.143235,9.09668&sspn=0.007953,0.018969&z=16">heart of rock'n roll Oslo</a> and still within decent walking distance of the venue. Free WiFi, naturally. <a href="http://www.comforthotelxpress.no/">Hotel website</a></p>
-
-
         <h2>Getting to the venue</h2>
 
         <strong>Walking</strong>
@@ -61,6 +47,21 @@
         <strong>Taxi</strong>
         <p>The address is Maridalsveien 13-17. Please note that taking a taxi in Norway is expensive.</p>
 
+        <h2>You can travel and stay in Norway cheaply (honeslty!)</h2>
+        <p><a target="_blank" href="http://norwegian.no/en/">Norwegian</a> and <a target="_blank" href="http://www.flysas.com/en/uk/">Scandinavian Airlines</a> both have lower priced tickets on sale which you can get if you make reservations early. <a target="_blank" href="http://norwegian.no/en/">Norwegian</a> tends to be the cheapest option, check out their <a href="http://www.norwegian.no/en/flight/lowfare/?D_City=LGW&A_City=OSL&TripType=2&D_Month=201305&R_Month=201305&AdultCount=1&ChildCount=0&InfantCount=0">calendar app for cheapest flights in the period</a> (this URL links to flight from London to Oslo).</p>
+        <p>Hotels can be expensive, so we've arranged for a rebel discount on the hotels at the venue. Read about the <a href="/location">hotel discounts</a> for more information.</p>
+
+        <h2>Staying in Oslo</h2>
+        <p>There are several great hotel in walking distance from the venue. Oslo can be a busy town, we do recommend booking your room early! Here are some of the hotels closes to our venue:</p>
+
+        <strong>Scandic Hotel Vulkan</strong>
+        <p>Scandic Hotel Vulkan is Web Rebels 2013 hotel partner. The hotel is a modern design hotel right next door to the venue. By staying here your will be able to walk in your slippers from your room and into the venue. When booking your Web Rebels 2013 ticket you will be given a discount code which can be used at this hotel. <a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Hotel website.</a></p>
+
+        <strong>PS:Hotell</strong>
+        <p>We're also happy that there is a cheaper hotel at the premises, just 20-30 m from the venue, which has extremely low prices. <a href="http://www.pshotell.no/">Hotel website</a></p>
+
+        <strong>Comfort Hotel xPress Oslo</strong>
+        <p>One of the coolest new hotels in the city, similar to the <a href="http://yotel.com">Yotel concept</a> in other cities. It's located right in the <a href="https://www.google.com/maps?q=m%C3%B8llergata+26+oslo&hl=no&ie=UTF8&sll=61.143235,9.09668&sspn=0.007953,0.018969&z=16">heart of rock'n roll Oslo</a> and still within decent walking distance of the venue. Free WiFi, naturally. <a href="http://www.comforthotelxpress.no/">Hotel website</a></p>
     </article>
 
     <script src="/js/location.js"></script>
