--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,7 +194,7 @@ body {
     display:                        block;
     border:                         6px solid rgb(178,128,89);
     border-radius:                  90px;
-    background:                     rgb(255,255,255);
+    background-color:                     rgb(255,255,255);
     background-repeat:              no-repeat;
     background-position:            top center;
     height:                         180px;
