--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -2,63 +2,189 @@
 
     <article class="wrap">
 
-        <h1>Web Rebels Schedule 2013</h1>
+        <h1>Schedule</h1>
+        <p>The schedule will be set at a later point but this is the outline for the conference</p>
 
-        <p>The schedule is far from complete yet, and may change at short notice. Come back for updates! Here is what we have so far:</p>
+        <table class="schedule" id="dayI">
+            <tr>
+                <th colspan="3">
+                    22th of May - Open Mic Night
+                    <p>The event takes place at <a href="http://vbarogbistro.no/">V Bar &amp; Restaurant</a> which is just next door to the conference venue. At the Open Mic Night you as an attendee will be able to get on the stage and do a lightening talk on any topic you want. <a href="/openmic/">Read more about the event here!</a></p>
+                </th>
+            </tr>
+            <tr>
+                <td class="time">20:00</td>
+                <td class="title">Intro</td>
+                <td class="additional">We kick off the Open Mic Night</td>
+            </tr>
+            <tr>
+                <td class="time">Talk I</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">Talk II</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">Talk III</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">Talk IV</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">Talk V</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+        </table>
 
-        <table class="schedule simple" id="dayI">
-        	<tbody>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">Addy Osmani</td>
-        			<td class="additional">JS Performance</td>
-        		</tr>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">Reginald Braithwaite</td>
-        			<td class="additional"></td>
-        		</tr>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">Magnar Sveen</td>
-        			<td class="additional">Tooling</td>
-        		</tr>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">David Nolen</td>
-        			<td class="additional">Alt. langs</td>
-        		</tr>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">Marius Gundersen</td>
-        			<td class="additional">JavaScript libs internals</td>
-        		</tr>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">Garann Means</td>
-        			<td class="additional"></td>
-        		</tr>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">Bodil Stokke</td>
-        			<td class="additional"></td>
-        		</tr>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">Robert Nyman</td>
-        			<td class="additional">Keynote</td>
-        		</tr>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">Mario Heiderich</td>
-        			<td class="additional">Security</td>
-        		</tr>
-        		<tr>
-        			<td class="time">-- : --</td>
-        			<td class="title">Jan Lehnardt</td>
-        			<td class="additional"></td>
-        		</tr>
-        	</tbody>
+
+        <table class="schedule" id="dayII">
+            <tr>
+                <th colspan="3">23rd of May</th>
+            </tr>
+            <tr>
+                <td class="time">08:00</td>
+                <td class="title">Registration and breakfast</td>
+                <td class="additional">No need for that hotel breakfast! Join us for a rebel-breakfast instead.</td>
+            </tr>
+            <tr>
+                <td class="time">09:00</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">09:45</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">10:30</td>
+                <td class="title">Coffee / tea break</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">11:00</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">11:45</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">12:30</td>
+                <td class="title">Lunch</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">13:30</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">14:15</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">15:00</td>
+                <td class="title">Coffee / tea break</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">15:30</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">16:15</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">17:00</td>
+                <td class="title">Conference dinner and party</td>
+                <td class="additional"> </td>
+            </tr>
+        </table>
+
+        <table class="schedule" id="dayIII">
+            <tr>
+                <th colspan="3">24th of May</th>
+            </tr>
+            <tr>
+                <td class="time">08:00</td>
+                <td class="title">Breakfast</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">09:00</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">09:45</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">10:30</td>
+                <td class="title">Coffee / tea break</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">11:00</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">11:45</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">12:30</td>
+                <td class="title">Lunch</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">13:30</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">14:15</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">15:00</td>
+                <td class="title">Coffee / tea break</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">15:30</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">16:15</td>
+                <td class="title">tba</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">17:00</td>
+                <td class="title">Group photo</td>
+                <td class="additional"> </td>
+            </tr>
         </table>
 
     </article>
