--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,54 +15,6 @@ ul {
     list-style:                     none;
 }
 
-/** Table styles **/
-table.simple {
-    width: 100%;
-    border: 1px solid #ddd;
-    border-collapse: separate;
-    border-radius: 4px;
-    padding: 0;
-    margin-bottom: 18px;
-    border-collapse: collapse;
-}
-table.simple thead tr:first-child th:first-child {
-    border-radius: 4px 0 0 0;
-}
-table.simple td, table.simple th {
-    padding-left: 10px;
-}
-
-table.simple thead th {
-    background-color: #666;
-    color: #fff;
-}
-
-table.simple th {
-    padding-top: 9px;
-    vertical-align: middle;
-    font-weight: normal;
-}
-table.simple th, table td {
-    padding: 10px 10px 9px 0;
-    line-height: 1.5em;
-    text-align: left;
-}
-table.simple td, table.simple th {
-    padding-left: 10px;
-}
-
-table.simple td {
-    vertical-align: top;
-    border-top: 1px solid #ddd;
-}
-
-table.simple th, table.simple td {
-    padding: 10px 10px 9px 20px;
-    line-height: 1.5em;
-    text-align: left;
-}
-
-
 
 /* Global styles */
 body {
@@ -70,6 +22,34 @@ body {
     line-height:                    1.5;
     -webkit-text-size-adjust:       none;
 }
+
+a {
+    color:                          rgb(138,138,76);
+}
+a:visited {
+    color:                          rgb(0,0,0);
+}
+
+table {
+    width:                          96%;
+    border-collapse:                collapse;
+    margin-bottom:                  20px;
+}
+tr {
+    /*color:                          rgb(240,240,234);*/
+}
+tr:nth-child( even ) {
+    background-color:               rgb(242,242,235);
+
+}
+tr:nth-child( odd ) {
+    background-color:               rgb(202,202,174);
+}
+td {
+    padding:                        10px;
+    vertical-align:                 top;
+}
+
 
 
 .front .title {
@@ -261,6 +241,8 @@ body {
 }
 
 
+
+
 .page {
     background-image:               url("../gfx/bg.jpg");
     background-color:               rgb(255,255,255);
@@ -272,7 +254,7 @@ body {
 .page .wrap,
 .page .foot {
     overflow:                       hidden;
-    width:                          960px;
+    width:                          720px;
     margin-left:                    auto;
     margin-right:                   auto;
     padding:                        20px;
@@ -370,4 +352,32 @@ body {
     position:                       absolute;
     top:                            0;
     left:                           0;
+}
+
+
+
+
+
+/* Schedule */
+.schedule {
+    width:                  680px;
+}
+.schedule th {
+    text-align:             left;
+    padding-bottom:         18px;
+}
+.schedule .time {
+    font-size:              .75em;
+    font-weight:            300;
+    width:                  100px;
+}
+.schedule .title {
+    font-size:              .875em;
+    font-weight:            400;
+    width:                  170px;
+}
+.schedule .additional {
+    font-size:              .75em;
+    font-weight:            300;
+    line-height:            22px;
 }
