--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,17 +35,17 @@ table {
     border-collapse:                collapse;
     margin-bottom:                  20px;
 }
-tr {
-    /*color:                          rgb(240,240,234);*/
+th {
+    background-color:               rgb(202,202,174);
 }
 tr:nth-child( even ) {
     background-color:               rgb(242,242,235);
 
 }
 tr:nth-child( odd ) {
-    background-color:               rgb(202,202,174);
+    background-color:               rgb(250,250,245);    
 }
-td {
+td, th {
     padding:                        10px;
     vertical-align:                 top;
 }
@@ -364,20 +364,13 @@ td {
 }
 .schedule th {
     text-align:             left;
-    padding-bottom:         18px;
 }
 .schedule .time {
-    font-size:              .75em;
-    font-weight:            300;
     width:                  100px;
 }
 .schedule .title {
-    font-size:              .875em;
-    font-weight:            400;
     width:                  170px;
 }
 .schedule .additional {
-    font-size:              .75em;
-    font-weight:            300;
     line-height:            22px;
 }
