--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -3,14 +3,11 @@
     <article class="wrap">
 
         <h1>Schedule</h1>
-        <p>The schedule will be set at a later point but this is the outline for the conference</p>
+        <p>The schedule will be set at a later point but this is the outline for the conference.</p>
 
         <table class="schedule" id="dayI">
             <tr>
-                <th colspan="3">
-                    22th of May - Open Mic Night
-                    <p>The event takes place at <a href="http://vbarogbistro.no/">V Bar &amp; Restaurant</a> which is just next door to the conference venue. At the Open Mic Night you as an attendee will be able to get on the stage and do a lightening talk on any topic you want. <a href="/openmic/">Read more about the event here!</a></p>
-                </th>
+                <th colspan="3">22th of May - Open Mic Night</th>
             </tr>
             <tr>
                 <td class="time">20:00</td>
@@ -43,11 +40,12 @@
                 <td class="additional"> </td>
             </tr>
         </table>
+        <p>The Open Mic Night takes place at <a href="http://vbarogbistro.no/">V Bar &amp; Restaurant</a> which is just next door to the conference venue. At the Open Mic Night you as an attendee will be able to get on the stage and do a lightening talk on any topic you want. <a href="/openmic/">Read more about the event here!</a></p>
 
 
         <table class="schedule" id="dayII">
             <tr>
-                <th colspan="3">23rd of May</th>
+                <th colspan="3">23rd of May - Conference Day I</th>
             </tr>
             <tr>
                 <td class="time">08:00</td>
@@ -56,12 +54,12 @@
             </tr>
             <tr>
                 <td class="time">09:00</td>
-                <td class="title">tba</td>
+                <td class="title">Talk I</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">09:45</td>
-                <td class="title">tba</td>
+                <td class="title">Talk II</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -71,12 +69,12 @@
             </tr>
             <tr>
                 <td class="time">11:00</td>
-                <td class="title">tba</td>
+                <td class="title">Talk III</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">11:45</td>
-                <td class="title">tba</td>
+                <td class="title">Talk IV</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -86,12 +84,12 @@
             </tr>
             <tr>
                 <td class="time">13:30</td>
-                <td class="title">tba</td>
+                <td class="title">Talk V</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">14:15</td>
-                <td class="title">tba</td>
+                <td class="title">Talk VI</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -101,12 +99,12 @@
             </tr>
             <tr>
                 <td class="time">15:30</td>
-                <td class="title">tba</td>
+                <td class="title">Talk VII</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">16:15</td>
-                <td class="title">tba</td>
+                <td class="title">Talk VIII</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -118,21 +116,21 @@
 
         <table class="schedule" id="dayIII">
             <tr>
-                <th colspan="3">24th of May</th>
+                <th colspan="3">24th of May - Conference Day I</th>
             </tr>
             <tr>
                 <td class="time">08:00</td>
-                <td class="title">Breakfast</td>
-                <td class="additional"> </td>
+                <td class="title">Breakfast.</td>
+                <td class="additional">There will be bacon!</td>
             </tr>
             <tr>
                 <td class="time">09:00</td>
-                <td class="title">tba</td>
+                <td class="title">Talk I</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">09:45</td>
-                <td class="title">tba</td>
+                <td class="title">Talk II</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -142,12 +140,12 @@
             </tr>
             <tr>
                 <td class="time">11:00</td>
-                <td class="title">tba</td>
+                <td class="title">Talk III</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">11:45</td>
-                <td class="title">tba</td>
+                <td class="title">Talk IV</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -157,12 +155,12 @@
             </tr>
             <tr>
                 <td class="time">13:30</td>
-                <td class="title">tba</td>
+                <td class="title">Talk V</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">14:15</td>
-                <td class="title">tba</td>
+                <td class="title">Talk VI</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -172,12 +170,12 @@
             </tr>
             <tr>
                 <td class="time">15:30</td>
-                <td class="title">tba</td>
+                <td class="title">Talk VII</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">16:15</td>
-                <td class="title">tba</td>
+                <td class="title">Talk VIII</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
