--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,9 @@
 <% include snips/head.ejs %>
 
     <article class="wrap">
-		<a class="fullWidthImg" href="http://www.flickr.com/photos/webrebels/7280977004/"><img src="/gfx/lagbilde_color.jpg"></a>
+		<a href="http://www.flickr.com/photos/webrebels/7280977004/">
+			<img class="imageFrame" src="/gfx/lagbilde_color.jpg">
+		</a>
 
 		<h1>About the Web Rebels Conference</h1>
 		<p>The Web Rebels conference takes place on the 23-24th of May 2013 in Oslo, Norway. We are a non-profit, community driven conference for everyone who loves developing applications and services using web technology. We had a great time hosting the conference for the first time last year and we are very excited to once again welcome all of our friends around the world!</p>
