--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -3,19 +3,17 @@
     <article class="wrap">
 
 
-		<h1>Relax, we've got you covered</h1>
+        <h1>Tickets</h1>
+        <p>Early Rebel tickets will go on sale Friday 1st of March at 14:00 GMT (15:00 Norwegian time)!</p>
 
-		<p>When you attend the Web Rebels Conference you're our guest and we will take care of you. We work very hard to make sure all you need to do is to get here and then we'll do all the rest.</p>
+        <div style="width:100%; text-align:left;" ><iframe  src="http://www.eventbrite.com/tickets-external?eid=3153505219&ref=etckt&v=2" frameborder="0" height="168" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe></div>
 
-        <h1 class="centrify huge">
-            <a href="http://webrebels.eventbrite.com/">Go grab your ticket!</a>
-        </h1>
-
-		<h2>This is included in your ticket</h2>
-		<p>Entrance to the conference and the <a href="/openmic">Open Mic Night</a>.</p>
-		<p>Buffet breakfast both days and lunch both days. Dinner on day one and continous delivery of coffee / tea plus. In other words; you will not need to buy any food during the conference!</p>
-		<p>Access to the conference party at the end of day one. Each attendee will be given a decent amount of free baverages where one can choose between a wide selection of micro brewery beers, wine or mineral water.</p>
-		
+        <h2>This is included in your ticket</h2>
+        <p>When you attend the Web Rebels Conference you're our guest and we will take care of you. We work very hard to make sure all you need to do is to get here and then we'll do all the rest.</p>
+        <p>Entrance to the conference and the <a href="/openmic">Open Mic Night</a>.</p>
+        <p>Buffet breakfast both days and lunch both days. Dinner on day one and continous delivery of coffee / tea plus. In other words; you will not need to buy any food during the conference!</p>
+        <p>Access to the conference party at the end of day one. Each attendee will be given a decent amount of free baverages where one can choose between a wide selection of micro brewery beers, wine or mineral water.</p>
+        
     </article>
     <% include snips/footer.ejs %>
 </body>
