--- a/views/location.ejs
+++ b/views/location.ejs
@@ -10,30 +10,18 @@
 
         <p>About 20 meters from the venue Norways first food hall is located with a wide selection of gourmet food stores, restaurant, excelent coffee and beer shops. All food served at Web Rebels 2013 will be provided from here.</p>
 
-        <div id="locationIll">
+        <div class="images" id="locationimages">
+            <a href="../gfx/venue_01.jpg" title="Previous picture" class="arrow prev">&lt;</a>
 
-            <div class="images" id="locationimages" style="display: none;">
-                <p class="arrowLeft"> </p>
-                <p class="slide focus" style="background-image: url('../gfx/venue_01.jpg')"> </p>
-                <p class="slide next" style="background-image: url('../gfx/venue_02.jpg')"> </p>
-                <p class="slide next" style="background-image: url('../gfx/venue_03.jpg')"> </p>
-                <p class="slide next" style="background-image: url('../gfx/venue_04.jpg')"> </p>
-                <p class="slide next" style="background-image: url('../gfx/venue_05.jpg')"> </p>
-                <p class="slide next" style="background-image: url('../gfx/venue_06.jpg')"> </p>
-                <p class="arrowRight"> </p>
-            </div>
-
-            <div id="map" class="map"> </div>
-        </div>
-
-        <div id="locationTogler">
-            <ul>
-                <li><a href="#locationimages">Images</a></li>
-                <li><a href="#locationmap">Map</a></li>
-            </ul>
+            <img id="locationimg" src="../gfx/venue_01.jpg" class="slide focus" title="Venue picture" data-n="1" data-min="1" data-max="6" />
+            
+            <!--p class="slide next" style="background-image: url('../gfx/venue_06.jpg')"> </p-->
+            <a href="../gfx/venue_02.jpg" title="Next picture" class="arrow next">&gt;</a>
         </div>
 
         <h2>Getting to the venue</h2>
+
+        <p>The address is <strong>Maridalsveien 13-17</strong></p>
 
         <strong>Walking</strong>
         <p>You can <a href="http://www.vulkanoslo.no/download.aspx?object_id=9A47978347B74EF395B7CCAF545A16E2.pdf">download a map</a> created by the owners of a venue nearby.</p>
@@ -46,6 +34,8 @@
 
         <strong>Taxi</strong>
         <p>The address is Maridalsveien 13-17. Please note that taking a taxi in Norway is expensive.</p>
+
+        <div id="map" class="map"> </div>
 
         <h2>You can travel and stay in Norway cheaply (honeslty!)</h2>
         <p><a target="_blank" href="http://norwegian.no/en/">Norwegian</a> and <a target="_blank" href="http://www.flysas.com/en/uk/">Scandinavian Airlines</a> both have lower priced tickets on sale which you can get if you make reservations early. <a target="_blank" href="http://norwegian.no/en/">Norwegian</a> tends to be the cheapest option, check out their <a href="http://www.norwegian.no/en/flight/lowfare/?D_City=LGW&A_City=OSL&TripType=2&D_Month=201305&R_Month=201305&AdultCount=1&ChildCount=0&InfantCount=0">calendar app for cheapest flights in the period</a> (this URL links to flight from London to Oslo).</p>
