--- a/views/sponsoroptions.ejs
+++ b/views/sponsoroptions.ejs
@@ -43,7 +43,12 @@
     </tbody>
     </table>
 
-    <p>In addition to the regular sponsorship packages we want to provide sponsors with other options for marketing their brand by helping us with some specifics related to the conference. These are exclusive packages only available to one sponsor.</p>
+    <p>
+      In addition to the regular sponsorship packages we want to
+      provide sponsors with other options for marketing their brand by
+      helping us with some specifics related to the conference. These
+      are exclusive packages only available to one sponsor.
+    </p>
 
     <table class="simple">
     <thead>
@@ -57,12 +62,20 @@
     </tr>
     <tr>
         <td>Sponsor of the Open Mic Night</td>
-        <td>Be the exclusive sponsor of this pre-event which takes place the day before the conference where anyone can do a talk.<br>You’ll be the only sponsor for this event with options to have promotion materials at the venue.</td>
+        <td>
+          Be the exclusive sponsor of this pre-event which takes place
+          the day before the conference where anyone can do a
+          talk.<br>You’ll be the only sponsor for this event with
+          options to have promotion materials at the venue.
+        </td>
         <td>20 000 NOK</td>
     </tr>
     </tbody>
     </table>
 
-    <p>Interested in sponsoring Web Rebels? If you want to find out more, <a href="mailto:sponsors[ replace this bracket with a @ ]webrebels.org&gt;">contact us today</a>.</p>
+    <p>
+      Interested in sponsoring Web Rebels? If you want to find out more,
+      <a href="mailto:sponsors[ replace this bracket with a @]webrebels.org&gt;">contact us today</a>.
+    </p>
 </article>
 <% include snips/footer.ejs %>
