--- a/views/ticketConfirmation.ejs
+++ b/views/ticketConfirmation.ejs
@@ -2,11 +2,17 @@
 
 <article class="wrap">
 	<h1>Ahoy, thank you!</h1>
-	<p>We look forward to seeing you in Oslo for this years Web Rebels!</p>
+	<p>We look forward to seeing you in Oslo for this year's Web Rebels!</p>
 
-	<p>Please do not hesitate to <a href="mailto:crew[insert at here]webrebels.org">contact us</a> with any questions or enquieries you might have. We are more than happy to help you plan your trip or other practicalities related to your stay in Oslo.</p>
+	<p>
+      Please do not hesitate to
+      <a href="mailto:crew[insert at here]webrebels.org">contact us</a>
+      with any questions or enquiries you might have. We are more than
+      happy to help you plan your trip or other practicalities related
+      to your stay in Oslo.
+    </p>
 
-                            
+
 </article>
     <% include snips/footer.ejs %>
 </body>
