--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -3,18 +3,36 @@
     <article class="wrap">
 
 
-		<h1>Relax, we've got you covered</h1>
+		<h1>Relax, We've Got You Covered</h1>
 
-		<p>When you attend the Web Rebels Conference you're our guest and we will take care of you. We work very hard to make sure all you need to do is to get here and then we'll do all the rest.</p>
+		<p>
+          When you attend the Web Rebels Conference, you're our guest
+          and we will take care of you. We work very hard to make sure
+          all you need to do is to get here and then we'll do all the
+          rest.
+        </p>
 
         <h1 class="centrify huge">
             <a href="http://webrebels.eventbrite.com/">Go grab your ticket!</a>
         </h1>
 
-		<h2>This is included in your ticket</h2>
-		<p>Entrance to the conference and the <a href="/openmic">Open Mic Night</a>.</p>
-		<p>Buffet breakfast both days and lunch both days. Dinner on day one and continous delivery of coffee / tea plus. In other words; you will not need to buy any food during the conference!</p>
-		<p>Access to the conference party at the end of day one. Each attendee will be given a decent amount of free baverages where one can choose between a wide selection of micro brewery beers, wine or mineral water.</p>
+		<h2>This is Included in Your Ticket</h2>
+		<p>
+          Entrance to the conference and the
+          <a href="/openmic">Open Mic Night</a>.
+        </p>
+		<p>
+          Buffet breakfast both days and lunch both days. Dinner one
+          day one and continuous delivery of coffee / tea plus. In
+          other words, you will not need to buy any food during the
+          conference.
+        </p>
+		<p>
+          Access to the conference party at the end of day one. Each
+          attendee will be given a decent amount of free beverages
+          where one can choose between a wide selection of micro
+          brewery beers, wine or mineral water.
+        </p>
 		
     </article>
     <% include snips/footer.ejs %>
