--- a/views/location.ejs
+++ b/views/location.ejs
@@ -1,14 +1,31 @@
-<% include snips/head.ejs %>  
+<% include snips/head.ejs %>
     <article class="wrap">
 
         <h1>Location</h1>
 
-        <p>Everything releated to the conference happens within a 200 m radius of the venue. The pre-party, the conference, the conference party and <a href="/openmic">Open Mic Night</a> are all taking place within a few meters of the venue.</p>
+        <p>
+          Everything releated to the conference happens within a 200m
+          radius of the venue. The pre-party, the conference, the
+          conference party and <a href="/openmic">Open Mic Night</a>
+          are all taking place within a few metres of the venue.
+        </p>
 
         <h2>Venue</h2>
-        <p>Our venue is Fabrikken located at in new area, Vulkan, at Günerløkka. The venue has brand new and modern fasilities and is one of Norways most enegry efficient buildings with top notch aircondition and high speed fiber internet.</p>
+        <p>
+          Our venue is Fabrikken, located in the newly constructed
+          area, Vulkan, at Grünerløkka. The venue has brand new and
+          modern facilities and is one of Norway's most energy
+          efficient buildings with top notch air conditioning and high
+          speed fiber internets.
+        </p>
 
-        <p>About 20 meters from the venue Norways first food hall is located with a wide selection of gourmet food stores, restaurant, excelent coffee and beer shops. All food served at Web Rebels 2013 will be provided from here.</p>
+        <p>
+          Oslo's first gourmet food market is located about 20 metres
+          from the venue, with a wide selection of gourmet food
+          stores, restaurants, excellent coffee and beer shops. All
+          food served at Web Rebels 2013 will be provided from here.
+        </p>
+
 
         <div id="locationIll">
 
@@ -33,35 +50,110 @@
             </ul>
         </div>
 
-        <h2>Getting to the venue</h2>
+        <h2>Getting to the Venue</h2>
 
         <strong>Walking</strong>
-        <p>You can <a href="http://www.vulkanoslo.no/download.aspx?object_id=9A47978347B74EF395B7CCAF545A16E2.pdf">download a map</a> created by the owners of a venue nearby.</p>
+        <p>
+          You can <a
+          href="http://www.vulkanoslo.no/download.aspx?object_id=9A47978347B74EF395B7CCAF545A16E2.pdf">download
+          a map</a> created by the owners of a venue nearby.
+        </p>
 
-        <strong>Tram (recommended)</strong>
-        <p>Lines 11, 12 and 13 all stop at <strong>Schous plass</strong> where you can walk down Nordregate and across the bridge to Vulkan</p>
+        <strong>Tram (Recommended)</strong>
+        <p>
+          Lines 11, 12 and 13 all stop at <em>Schous plass</em>, where
+          you can walk down Nordregate and across the bridge to
+          Vulkan.
+        </p>
 
         <strong>Bus</strong>
-        <p>Bus 53 and 54 stops in M&oslash;llerveien. Walk down M&oslash;llerveien and make a left at Dansens Hus</p>
+        <p>
+          Bus 53 and 54 stops at <em>M&oslash;llerveien</em>. Walk down
+          M&oslash;llerveien and make a left at Dansens Hus.
+        </p>
 
         <strong>Taxi</strong>
-        <p>The address is Maridalsveien 13-17. Please note that taking a taxi in Norway is expensive.</p>
+        <p>
+          The address is <em>Maridalsveien 13-17</em>. Please note
+          that taxi fares in Norway are quite expensive.
+        </p>
 
-        <h2>You can travel and stay in Norway cheaply (honeslty!)</h2>
-        <p><a target="_blank" href="http://norwegian.no/en/">Norwegian</a> and <a target="_blank" href="http://www.flysas.com/en/uk/">Scandinavian Airlines</a> both have lower priced tickets on sale which you can get if you make reservations early. <a target="_blank" href="http://norwegian.no/en/">Norwegian</a> tends to be the cheapest option, check out their <a href="http://www.norwegian.no/en/flight/lowfare/?D_City=LGW&A_City=OSL&TripType=2&D_Month=201305&R_Month=201305&AdultCount=1&ChildCount=0&InfantCount=0">calendar app for cheapest flights in the period</a> (this URL links to flight from London to Oslo).</p>
-        <p>Hotels can be expensive, so we've arranged for a rebel discount on the hotels at the venue. Read about the <a href="/location">hotel discounts</a> for more information.</p>
+        <h2>You Can Travel and Stay in Norway Cheaply (No, Really!)</h2>
+        <p>
+          <a target="_blank" href="http://norwegian.no/en/">Norwegian</a> and
+          <a target="_blank" href="http://www.flysas.com/en/uk/">SAS</a>
+          both have lower priced tickets on sale which
+          you can get if you make reservations early.
+          <a target="_blank" href="http://norwegian.no/en/">Norwegian</a>
+          tends to be the cheapest option, check out their
+          <a href="http://www.norwegian.no/en/flight/lowfare/?D_City=LGW&A_City=OSL&TripType=2&D_Month=201305&R_Month=201305&AdultCount=1&ChildCount=0&InfantCount=0">calendar
+          app for cheapest flights in the period</a> (this URL links
+          to flights from London to Oslo).
+        </p>
+        <p>
+          SAS generally offers a more comfortable flight, but
+          Norwegian has in-flight wifi.
+        </p>
+        <p>
+          Hotels can be expensive, so we've arranged for a rebel
+          discount at the hotels around the venue. We'll mail you the
+          promo codes when you book your ticket.
+        </p>
 
         <h2>Staying in Oslo</h2>
-        <p>There are several great hotel in walking distance from the venue. Oslo can be a busy town, we do recommend booking your room early! Here are some of the hotels closes to our venue:</p>
+        <p>
+          There are several great hotels within walking distance from
+          the venue. Oslo can be a busy town, so we recommend booking
+          your room early! Here are some of the hotels closest to our
+          venue:
+        </p>
 
-        <strong>Scandic Hotel Vulkan</strong>
-        <p>Scandic Hotel Vulkan is Web Rebels 2013 hotel partner. The hotel is a modern design hotel right next door to the venue. By staying here your will be able to walk in your slippers from your room and into the venue. When booking your Web Rebels 2013 ticket you will be given a discount code which can be used at this hotel. <a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Hotel website.</a></p>
+        <strong><a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Scandic Hotel Vulkan</a></strong>
+        <p>
+          Scandic Hotel Vulkan is the Web Rebels 2013 hotel partner.
+          This is a modern hotel right next door to the venue. By
+          staying here, your will be able to walk in your slippers from
+          your room and into the venue. When booking your Web Rebels
+          2013 ticket you will be given a discount code which can be
+          used at this hotel.
+          <a href="http://www.scandichotels.no/Hotels/Countries/Norge/Oslo/Hotels/Vulkan/#.UR6ROqvipms">Hotel website.</a>
+        </p>
 
-        <strong>PS:Hotell</strong>
-        <p>We're also happy that there is a cheaper hotel at the premises, just 20-30 m from the venue, which has extremely low prices. <a href="http://www.pshotell.no/">Hotel website</a></p>
+        <strong><a href="http://www.pshotell.no/">PS:Hotell</a></strong>
+        <p>
+          We're also happy that there is a cheaper hotel at the
+          premises, just 20-30m from the venue, which has extremely
+          low prices. <a href="http://www.pshotell.no/">Hotel
+          website</a>
+        </p>
 
-        <strong>Comfort Hotel xPress Oslo</strong>
-        <p>One of the coolest new hotels in the city, similar to the <a href="http://yotel.com">Yotel concept</a> in other cities. It's located right in the <a href="https://www.google.com/maps?q=m%C3%B8llergata+26+oslo&hl=no&ie=UTF8&sll=61.143235,9.09668&sspn=0.007953,0.018969&z=16">heart of rock'n roll Oslo</a> and still within decent walking distance of the venue. Free WiFi, naturally. <a href="http://www.comforthotelxpress.no/">Hotel website</a></p>
+        <strong><a href="http://www.comforthotelxpress.no/">Comfort Hotel xPress Oslo</a></strong>
+        <p>
+          One of the coolest new hotels in the city, similar to the
+          <a href="http://yotel.com">Yotel concept</a> in other cities.
+          It's located right in the
+          <a href="https://www.google.com/maps?q=m%C3%B8llergata+26+oslo&hl=no&ie=UTF8&sll=61.143235,9.09668&sspn=0.007953,0.018969&z=16">heart
+          of rock'n roll Oslo</a> and still within decent walking
+          distance of the venue. Free wifi, naturally.
+          <a href="http://www.comforthotelxpress.no/">Hotel website</a>
+        </p>
+
+        <h2>If Your Company's Paying Anyway</h2>
+        <p>
+          Unlike most other things in Norway, hotels in Oslo are
+          surprisingly cheap. You can stay at the 5 star
+          <a href="http://www.radissonblu.com/plazahotel-oslo">Radisson
+          BLU Plaza</a>, located in the heart of the city, right next
+          to all the public transport you'll need to get to the venue,
+          for a lot less than you'd expect.
+        </p>
+        <p>
+          If you really want to go all out on the expense account,
+          though, there's always the
+          <a href="http://www.hotelcontinental.no/flash.aspx?ID=338&AreaID=2">Hotel
+          Continental</a>. We expect that if you can afford to stay
+          there, you won't mind having to get to the venue by taxi.
+        </p>
     </article>
 
     <script src="/js/location.js"></script>
