--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -3,11 +3,11 @@
     <article class="wrap">
 
         <h1>Schedule</h1>
-        <p>The schedule will be set at a later point but this is the outline for the conference.</p>
+        <p>The schedule will be set at a later point, but this is the outline for the conference.</p>
 
         <table class="schedule" id="dayI">
             <tr>
-                <th colspan="3">22th of May - Open Mic Night</th>
+                <th colspan="3">22nd of May - Open Mic Night</th>
             </tr>
             <tr>
                 <td class="time">20:00</td>
@@ -40,7 +40,14 @@
                 <td class="additional"> </td>
             </tr>
         </table>
-        <p>The Open Mic Night takes place at <a href="http://vbarogbistro.no/">V Bar &amp; Restaurant</a> which is just next door to the conference venue. At the Open Mic Night you as an attendee will be able to get on the stage and do a lightening talk on any topic you want. <a href="/openmic/">Read more about the event here!</a></p>
+        <p>
+          The Open Mic Night takes place at
+          <a href="http://vbarogbistro.no/">V Bar &amp; Restaurant</a>
+          which is just next door to the conference venue. At the Open
+          Mic Night you as an attendee will be able to get on the
+          stage and do a lightning talk on any topic you want.
+          <a href="/openmic/">Read more about the event here!</a>
+        </p>
 
 
         <table class="schedule" id="dayII">
@@ -50,7 +57,7 @@
             <tr>
                 <td class="time">08:00</td>
                 <td class="title">Registration and breakfast</td>
-                <td class="additional">No need for that hotel breakfast! Join us for a rebel-breakfast instead.</td>
+                <td class="additional">No need for that hotel breakfast! Join us for a Rebel breakfast instead.</td>
             </tr>
             <tr>
                 <td class="time">09:00</td>
@@ -64,7 +71,7 @@
             </tr>
             <tr>
                 <td class="time">10:30</td>
-                <td class="title">Coffee / tea break</td>
+                <td class="title">Coffee/tea break</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -94,7 +101,7 @@
             </tr>
             <tr>
                 <td class="time">15:00</td>
-                <td class="title">Coffee / tea break</td>
+                <td class="title">Coffee/tea break</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -121,7 +128,7 @@
             <tr>
                 <td class="time">08:00</td>
                 <td class="title">Breakfast.</td>
-                <td class="additional">There will be bacon!</td>
+                <td class="additional" title="Also proper veggie food">There will be bacon!</td>
             </tr>
             <tr>
                 <td class="time">09:00</td>
@@ -135,7 +142,7 @@
             </tr>
             <tr>
                 <td class="time">10:30</td>
-                <td class="title">Coffee / tea break</td>
+                <td class="title">Coffee/tea break</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
@@ -165,7 +172,7 @@
             </tr>
             <tr>
                 <td class="time">15:00</td>
-                <td class="title">Coffee / tea break</td>
+                <td class="title">Coffee/tea break</td>
                 <td class="additional"> </td>
             </tr>
             <tr>
