--- a/views/sponsors.ejs
+++ b/views/sponsors.ejs
@@ -1,35 +1,44 @@
 <% include snips/head.ejs %>
 
     <article class="wrap">
-		<h1>Our beloved sponsors!</h1>
-		<p>We want you to help contribute to making the conference better. Our focus is to create mutual benefits for sponsors and attendees by creating amazing experiences. We want to work with our sponsors to help you promote your brand, launch your product or whatever you have in mind.</p>
+        <h1>Our beloved sponsors!</h1>
+        <p>
+          We want you to help contribute to making the conference
+          better. Our focus is to create mutual benefits for sponsors
+          and attendees by creating amazing experiences. We want to
+          work with our sponsors to help you promote your brand,
+          launch your product or whatever you have in mind.
+        </p>
 
-		<p>Sounds interesting? <a href="mailto:sponsors[ replace this bracket with a @ ]webrebels.org&gt;">Contact us today</a> or read more about <a href="/sponsoroptions">our sponsoring options</a>.</p>
+        <p>
+          Sounds interesting? <a href="mailto:sponsors[ replace this bracket with a @ ]webrebels.org&gt;">Contact us today</a>
+          or read more about <a href="/sponsoroptions">our sponsoring options</a>.
+        </p>
 
-		<div class="fleft half">
-			<a href="http://kodemaker.no/"><img src="/gfx/sponsors/sponsor-kodemaker.png"></a>
-			<p>
-			bla bla bla bla
-			</p>
-		</div>
-		<div class="fleft half last">
-			<a href="http://finn.no/"><img src="/gfx/sponsors/sponsor-finn.png"></a>
-			<p>
-			bla bla bla bla
-			</p>
-		</div>
-		<div class="fleft half">
-			<a href="http://arktekk.no/"><img src="/gfx/sponsors/sponsor-arktekk.png"></a>
-			<p>
-			bla bla bla bla
-			</p>
-		</div>
-		<div class="fleft half last">
-			<a href="http://bekk.no/"><img src="/gfx/sponsors/sponsor-bekk.png"></a>
-			<p>
-			bla bla bla bla
-			</p>
-		</div>
+        <div class="fleft half">
+            <a href="http://kodemaker.no/"><img src="/gfx/sponsors/sponsor-kodemaker.png"></a>
+            <p>
+            bla bla bla bla
+            </p>
+        </div>
+        <div class="fleft half last">
+            <a href="http://finn.no/"><img src="/gfx/sponsors/sponsor-finn.png"></a>
+            <p>
+            bla bla bla bla
+            </p>
+        </div>
+        <div class="fleft half">
+            <a href="http://arktekk.no/"><img src="/gfx/sponsors/sponsor-arktekk.png"></a>
+            <p>
+            bla bla bla bla
+            </p>
+        </div>
+        <div class="fleft half last">
+            <a href="http://bekk.no/"><img src="/gfx/sponsors/sponsor-bekk.png"></a>
+            <p>
+            bla bla bla bla
+            </p>
+        </div>
 
     </article>
     <% include snips/footer.ejs %>
