removed sponsor logos until we have the texts

--- a/views/location.ejs
+++ b/views/location.ejs
@@ -6,7 +6,7 @@
         <p>Everything releated to the conference happens within a 200 m radius of the venue. The pre-party, the conference, the conference party and <a href="/openmic">Open Mic Night</a> are all taking place within a few meters of the venue.</p>
 
         <h2>Venue</h2>
-        <p>Our venue is Fabrikken located at in new area, Vulkan, at Günerløkka. The venue has brand new and modern fasilities and is one of Norways most enegry efficient buildings with top notch aircondition and high speed fiber internet.</p>
+        <p>Our venue is Fabrikken located at in new area, <a target="_blank" href="http://www.vulkanoslo.no/">Vulkan</a>, at Günerløkka. The venue has brand new and modern fasilities and is one of Norways most enegry efficient buildings with top notch aircondition and high speed fiber internet.</p>
 
         <p>About 20 meters from the venue Norways first food hall is located with a wide selection of gourmet food stores, restaurant, excelent coffee and beer shops. All food served at Web Rebels 2013 will be provided from here.</p>
 
