adjusted the sposoring options page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,6 +37,7 @@ table {
 }
 th {
     background-color:               rgb(202,202,174);
+    text-align:                     left;
 }
 tr:nth-child( even ) {
     background-color:               rgb(242,242,235);
@@ -49,7 +50,10 @@ td, th {
     padding:                        10px;
     vertical-align:                 top;
 }
-
+td ul {
+    list-style:                     disc;
+    margin-left:                    4px;
+}
 
 .front .title {
     font-family:                    'Asap', sans-serif;
