--- a/views/sponsoroptions.ejs
+++ b/views/sponsoroptions.ejs
@@ -2,11 +2,12 @@
 
 <article class="wrap">
     <h1>Sponsorship options</h1>
-
-    <table class="simple">
+    <p>Listed below are our sponsorship options. There is a limited number of packages available, so don't take too long to decide!</p>
+    <p>We think that working together with our sponsors to create amazing experiences gives the best return on the investment, so please send us your ideas and we will work something out.</p>
+    <table>
     <thead>
         <tr><th>Tier</th>
-        <th>Includes</th>
+        <th>Description</th>
         <th>Price</th></tr>
     </thead>
     <tbody>
@@ -58,16 +59,11 @@
     <tr>
         <td>Barista at the venue</td>
         <td>Cover expenses related to having baristas serve amazing coffee</td>
-        <td>Somewhere between 30-40 000 NOK (we are still negotiating the price)</td>
+        <td>Somewhere between 30-40 000 NOK <small>(we are still negotiating the price)</small></td>
     </tr>
     <tr>
         <td>Sponsor of the Open Mic Night</td>
-        <td>
-          Be the exclusive sponsor of this pre-event which takes place
-          the day before the conference where anyone can do a
-          talk.<br>You’ll be the only sponsor for this event with
-          options to have promotion materials at the venue.
-        </td>
+        <td>Be the exclusive sponsor of this pre-event which takes place the day before the conference where anyone can do a talk.</td>
         <td>20 000 NOK</td>
     </tr>
     </tbody>
