--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -1,5 +1,6 @@
 <footer class="foot">
 	<a href="http://webrebels.tumblr.com">Tumblr</a>
+	<a href="http://flickr.com/webrebels">Flickr</a>
     <a href="http://lanyrd.com/2013/webreb/">Lanyrd</a>
     <a href="https://vimeo.com/channels/wr2012">Vimeo</a>
     <a href="http://twitter.com/">Twitter</a>
